fixed some layout issues on index page and made navbar collapsable

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@
     font-family: serif;
     font-weight: bold;
     font-size: 1.6em;
-    margin-left: 145px;
+    margin-left: 17px;
     
 }
 
 #nav-links{
-    margin-right: 145px;
+    
 }
 
 h1{
@@ -24,13 +24,31 @@ h3{
     font-family: serif;
     color: teal;
     font-weight: bold;
+    text-align: center
     
+}
+
+
+#profile-pic{
+   
+   padding-right: 15px;
+
 }
 
 .contact-images{
     height: 64px;
     width: 64px;
+
 }
+
+.panel-body{
+    padding: 15px 15px 15px 11%;
+
+}
+
+
+    
+
 
 #git{
 
@@ -39,6 +57,10 @@ h3{
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-delay: 4s;
+    width: 30%;
+    height: auto;
+    height: auto;    
+    
     
 }
 
@@ -55,6 +77,9 @@ h3{
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-delay: 4.15s;
+    width: 30%;
+    height: auto;
+    
     
 }
 
@@ -71,6 +96,10 @@ h3{
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-delay: 4.3s;
+    width:30%;
+    height: auto;
+    
+    
     
 }
 
